# Prima

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Directory.Build.props  Prima.slnx  ROADMAP.md  build-native.ps1  build.ps1  test.ps1
app/Prima.App/: AppPaths.cs  AppSettings.cs  Brush.cs  BrushEngine.cs  ColorHistory.cs  ColorWheel.cs  Document.FloodFill.cs  Document.History.cs  Document.IO.cs  Document.cs  Hsv.cs  NativeMethods.cs  PaletteSerializer.cs  RecentColors.cs  RecentPalettes.cs  Renderer.cs  Rgba.cs  SwatchPalette.cs  ToolType.cs  Viewport.cs
app/Prima.App/Commands/: CommandDescriptor.cs  CommandRegistry.cs  FuzzyMatcher.cs
app/Prima.App/History/: Edits.cs  History.cs
docs/features/: BrushSystem.md  Color Selector improvements.md  ColorPicker.md  ColorPickerResearch.md  SystemDirectory.md  UX features.md  brush-engine.md  command-search.md  d3d11-backend.md  reference-image.md  research-improvements.md  undo-redo.md
engine/: CMakeLists.txt
engine/include/prima/: brush.h  brush_math.h  canvas.h  color.h  color_wheel.h  d3d11_renderer.h  dab_emitter.h  flood_fill.h  image_io.h  rect.h  renderer.h  viewport.h
engine/src/: brush_engine.cpp  canvas.cpp  color.cpp  color_wheel.cpp  cpu_sampling.h  d3d11_renderer.cpp  dab_emitter.cpp  flood_fill.cpp  image_io.cpp  software_renderer.cpp
host/Prima.Cli/: Prima.Cli.csproj  Program.cs
interop/: CMakeLists.txt
interop/include/prima_c/: prima_c.h
interop/src/: prima_c.cpp
tests/app/Prima.App.Tests/: AppPathsTests.cs  BrushEngineTests.cs  ColorHistoryTests.cs  ColorWheelTests.cs  CommandRegistryTests.cs  DocumentHistoryTests.cs  DocumentIoTests.cs  DocumentTests.cs  FloodFillTests.cs  FuzzyMatcherTests.cs  HistoryTests.cs  HsvTests.cs  PaletteSerializerTests.cs  Prima.App.Tests.csproj  RecentColorsTests.cs  RecentPalettesTests.cs  RendererTests.cs  SwatchPaletteTests.cs
tests/engine/: CMakeLists.txt  brush_engine_test.cpp  brush_math_test.cpp  canvas_test.cpp  color_test.cpp  color_wheel_test.cpp  d3d11_renderer_test.cpp  dab_emitter_test.cpp  flood_fill_test.cpp  image_io_test.cpp  renderer_test.cpp
tests/ui/Prima.Desktop.Tests/: CommandRevealTests.cs  ControlHighlighterTests.cs  Prima.Desktop.Tests.csproj  TestAppBuilder.cs
ui/Prima.Desktop/: App.axaml  App.axaml.cs  ConfirmDialog.axaml  ConfirmDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Prima.Desktop.csproj  Program.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
ui/Prima.Desktop/Commands/: CommandCatalog.cs  CommandTarget.cs  ControlHighlighter.cs
ui/Prima.Desktop/Controls/: CanvasControl.cs  ColorPickerControl.axaml  ColorPickerControl.axaml.cs  ColorPreviewSplit.axaml  ColorPreviewSplit.axaml.cs  ColorSliderControl.axaml  ColorSliderControl.axaml.cs  CommandPalette.axaml  CommandPalette.axaml.cs  HueRingTriangleControl.cs  LabeledColorField.axaml  LabeledColorField.axaml.cs  SwatchStrip.axaml  SwatchStrip.axaml.cs  ToolContextBar.axaml  ToolContextBar.axaml.cs  ToolPanel.axaml  ToolPanel.axaml.cs
ui/Prima.Desktop/Themes/: Theme.axaml
